--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ on:
 
 env:
   BUILD_NUMBER: ${{ github.run_number }}
-  PROJECT_PATH: "cs2-store-gamble.csproj"
-  PROJECT_NAME: "cs2-store-gamble"
-  OUTPUT_PATH: "./cs2-store-gamble"
+  PROJECT_PATH: "cs2-store-logs.csproj"
+  PROJECT_NAME: "cs2-store-logs"
+  OUTPUT_PATH: "./cs2-store-logs"
 
 jobs:
   build:
@@ -30,7 +30,7 @@ jobs:
       - name: Restore
         run: dotnet restore
       - name: Build
-        run: dotnet build ${{ env.PROJECT_PATH }} -c cs2-store-gamble -o ${{ env.OUTPUT_PATH }}
+        run: dotnet build ${{ env.PROJECT_PATH }} -c cs2-store-logs -o ${{ env.OUTPUT_PATH }}
 
   publish:
     if: github.event_name == 'push'
@@ -46,7 +46,7 @@ jobs:
       - name: Restore
         run: dotnet restore
       - name: Build
-        run: dotnet build ${{ env.PROJECT_PATH }} -c cs2-store-gamble -o ${{ env.OUTPUT_PATH }}
+        run: dotnet build ${{ env.PROJECT_PATH }} -c cs2-store-logs -o ${{ env.OUTPUT_PATH }}
       - name: Clean files
         run: |
           rm -f \
@@ -60,12 +60,12 @@ jobs:
           type: "zip"
           filename: "${{ env.PROJECT_NAME }}.zip"
           path: ${{ env.OUTPUT_PATH }}
-      - name: cs2-store-gamble
+      - name: cs2-store-logs
         uses: ncipollo/release-action@v1.12.0
         with:
           artifacts: "${{ env.PROJECT_NAME }}.zip"
           name: "Build ${{ env.BUILD_NUMBER }}"
           tag: "build-${{ env.BUILD_NUMBER }}"
           body: |
-            Place the plugin in game/csgo/addons/counterstrikesharp/plugins/cs2-store-gamble
-            After first launch, u need to configure plugin in  addons/counterstrikesharp/configs/plugins/cs2-store-gamble/cs2-store-gamble.json
+            Place the plugin in game/csgo/addons/counterstrikesharp/plugins/cs2-store-logs
+            After first launch, u need to configure plugin in  addons/counterstrikesharp/configs/plugins/cs2-store-logs/cs2-store-logs.json
