--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
       "type": "process",
       "args": [
         "build",
-        "${workspaceFolder}/cs2-store-gamble.csproj",
+        "${workspaceFolder}/cs2-store-logs.csproj",
         "--output",
         "Build"
       ],
